--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.17.0",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.7.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
+    "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
