--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   postgres:
     image: postgres:14
@@ -9,6 +7,8 @@ services:
       POSTGRES_DB: edu_tech
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5433:5432"
 
   app:
     build: .
