--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,18 +18,18 @@ jobs:
           known_hosts: unnecessary
           if_key_exists: ignore
 
-      - name: Build project
-        uses: appleboy/ssh-action@master
-        with:
-          host: 64.226.68.123
-          username: muchnik
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          command_timeout: 200m
-          script: |
-            cd ~/edutech/server
-            git pull
-            docker-compose build
+      # - name: Build project
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: 64.226.68.123
+      #     username: muchnik
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     port: 22
+      #     command_timeout: 200m
+      #     script: |
+      #       cd ~/edutech/server
+      #       git pull
+      #       docker-compose build
 
       - name: Deploy project
         uses: appleboy/ssh-action@master
